# WhiteStat

./: .gitignore  .pythonenv  Dockerfile  Dockerfile.armhf  LICENSE  README.md  WhiteStat.py  WhiteStatAnalyzer.py  WhiteStatServer.py  WhiteStatUtils.py  WhitestatAutoBuildAll.sh  index.md
Config/: IP_MAC.txt  MAC_MAC.txt  WhiteStat.db  WhiteStatConfig.json
Docs/: Architecture.MD  LinuxDeviceAsGateway.md  RPi2NetworkMonitor.pptx  WhiteStatArch.pptx
UX/: package-lock.json
UX/config/: paths.js
UX/src/: index.js
UX/src/scripts/: App.js  (+3 more)
WhiteStat/: .dockerignore  C++BuilderDockerfile.armhf  Dockerfile  Dockerfile.WIN64  Dockerfile.armhf  Dockerfile_v10+  Dockerfile_v10+.WIN64  Dockerfile_v10+.armhf  WhiteStatMemCheckAsHostScript.sh  WhiteStatService.ps1  WhiteStatService.sh  WhiteStatServiceArmhf.sh  WhitestatAutoBuildPublish.ps1  WhitestatAutoBuildPublish.sh  WhitestatAutoDockerDeploy.sh  WhitestatAutoDockerDeployMultiHost.sh  main.profile.py  main.py  requirements.txt  setup.py  startup.py
WhiteStat/Analyzer/: Analyzer.py  Analyzer.py.pands.txt  Manager.py  WebServer.py  WhiteStat .Prev.py.txt  WhiteStat.py  WhiteStatAnalyzer.py  WhiteStatServer.py
WhiteStat/Common/: Utility.py
WhiteStat/NetMonitor/: Dispatcher.py  Dispatcher.py.pandas.txt  Monitor.py  MonitorEx.py  PacketFilter.py  RemoteServer.py  RemoteServer.py.Managers.txt  RemoteServerEx.py
WhiteStat/NetMonitor/CLIB/: CMakeLists.txt  CPacketProcessor.cpp  CPcap.cpp  CUtility.cpp  Frame.cpp  Include.hpp  Packet.cpp  TestCTypes.py  Wrapper.py  main.cpp
WhiteStat/NetMonitor/CLIB/boost/: ReadMe.txt
(+18 files in other folders)
